--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -10,44 +10,57 @@ on:
 jobs:
   build:
     runs-on: windows-latest
-    
+
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
-      
+
     - name: Setup MSBuild
       uses: microsoft/setup-msbuild@v1.1
-      
+
     - name: Setup CMake
       uses: lukka/get-cmake@latest
-      
+
     - name: Create build directory
       run: mkdir build
-      
+
     - name: Configure CMake
       working-directory: ./build
       run: cmake .. -G "Visual Studio 17 2022" -A x64
-      
+
     - name: Build with MSBuild
       working-directory: ./build
       run: msbuild ALL_BUILD.vcxproj /p:Configuration=Release /p:Platform=x64
-      
+
     - name: Copy necessary files
       run: |
         mkdir dist
         copy build\Release\*.exe dist\
         copy config.ini dist\ || echo "config.ini not found, skipping"
-        
+
     - name: Create ZIP archive
       run: |
         Compress-Archive -Path dist\* -DestinationPath app.zip
-        
+
     - name: Upload artifacts
       uses: actions/upload-artifact@v3
       with:
         name: windows-app
         path: app.zip
-        
+        retention-days: 5
+
+    # Example of downloading the artifact in the same workflow
+    - name: Download artifact for testing
+      uses: actions/download-artifact@v3
+      with:
+        name: windows-app
+        path: download-test
+
+    - name: Verify downloaded artifact
+      run: |
+        dir download-test
+        echo "Artifact successfully downloaded and verified"
+
     - name: Create Release
       if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
       id: create_release
@@ -59,7 +72,7 @@ jobs:
         release_name: Release ${{ github.ref }}
         draft: false
         prerelease: false
-        
+
     - name: Upload Release Asset
       if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
       uses: actions/upload-release-asset@v1
