--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -16,7 +16,7 @@ jobs:
       uses: actions/checkout@v3
 
     - name: Setup MSBuild
-      uses: microsoft/setup-msbuild@v1.1
+      uses: microsoft/setup-msbuild@v2
 
     - name: Setup CMake
       uses: lukka/get-cmake@latest
@@ -26,21 +26,22 @@ jobs:
 
     - name: Configure CMake
       working-directory: ./build
-      run: cmake ..
+      run: cmake .. -G "Visual Studio 16 2019" -A x64
 
-    - name: Build with CMake
+    - name: Build with MSBuild
       working-directory: ./build
-      run: cmake --build . --config Release
+      run: msbuild ALL_BUILD.vcxproj /p:Configuration=Release /p:Platform=x64
 
     - name: Copy necessary files
       run: |
         mkdir dist
-        copy build\Release\*.exe dist\ || copy build\*.exe dist\
+        copy build\Release\*.exe dist\
         copy config.ini dist\ || echo "config.ini not found, skipping"
 
     - name: Create ZIP archive
       run: |
         Compress-Archive -Path dist\* -DestinationPath app.zip
+
 
     - name: Create Release
       if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
