--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -5,7 +5,7 @@ on:
     branches: [ main ]
   pull_request:
     branches: [ main ]
-  workflow_dispatch:  # Allows manual triggering
+  workflow_dispatch:  # 允许手动触发
 
 jobs:
   build:
@@ -28,9 +28,9 @@ jobs:
       working-directory: ./build
       run: cmake .. -G "Visual Studio 17 2022" -A x64
 
-    - name: Build with MSBuild
+    - name: Build with CMake
       working-directory: ./build
-      run: msbuild ALL_BUILD.vcxproj /p:Configuration=Release /p:Platform=x64
+      run: cmake --build . --config Release
 
     - name: Copy necessary files
       run: |
@@ -42,26 +42,49 @@ jobs:
       run: |
         Compress-Archive -Path dist\* -DestinationPath app.zip
 
-
-    - name: Create Release
-      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
-      id: create_release
-      uses: actions/create-release@v1
+    # 删除已存在的 release 标签（如果存在）
+    - name: Delete existing release tag
+      if: github.event_name == 'push' && github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch'
+      run: |
+        git config --global user.name "GitHub Actions"
+        git config --global user.email "actions@github.com"
+        git tag -d release || true
+        git push origin :refs/tags/release || true
+      continue-on-error: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    # 创建新的 release 标签
+    - name: Create release tag
+      if: github.event_name == 'push' && github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch'
+      run: |
+        git tag release
+        git push origin release
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+    # 删除已存在的发布版本
+    - name: Delete existing release
+      if: github.event_name == 'push' && github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch'
+      uses: dev-drprasad/delete-tag-and-release@v0.2.1
       with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
+        tag_name: release
+        delete_release: true
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      continue-on-error: true
+
+    # 创建新的发布版本
+    - name: Create Release
+      if: github.event_name == 'push' && github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch'
+      id: create_release
+      uses: softprops/action-gh-release@v1
+      with:
+        tag_name: release
+        name: Latest Release
+        body: 自动构建的最新版本
+        files: app.zip
         draft: false
         prerelease: false
-
-    - name: Upload Release Asset
-      if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/')
-      uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: ./app.zip
-        asset_name: windows-app.zip
-        asset_content_type: application/zip
