--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -7,6 +7,11 @@ on:
     branches: [ main ]
   workflow_dispatch:  # 允许手动触发
 
+# 添加权限配置
+permissions:
+  contents: write
+  packages: read
+
 jobs:
   build:
     runs-on: windows-latest
