--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -1,11 +1,13 @@
 name: Build Windows Application
 
 on:
+  workflow_dispatch:  # 允许手动触发
   push:
     branches: [ main ]
+    paths:
+      - '!.github/workflows/**'
   pull_request:
     branches: [ main ]
-  workflow_dispatch:  # 允许手动触发
 
 # 添加权限配置
 permissions:
@@ -49,7 +51,6 @@ jobs:
 
     # 删除已存在的 release 标签（如果存在）
     - name: Delete existing release tag
-      if: github.event_name == 'push' && github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch'
       run: |
         git config --global user.name "GitHub Actions"
         git config --global user.email "actions@github.com"
@@ -61,7 +62,6 @@ jobs:
 
     # 创建新的 release 标签
     - name: Create release tag
-      if: github.event_name == 'push' && github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch'
       run: |
         git tag release
         git push origin release
@@ -70,7 +70,6 @@ jobs:
 
     # 删除已存在的发布版本
     - name: Delete existing release
-      if: github.event_name == 'push' && github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch'
       uses: dev-drprasad/delete-tag-and-release@v0.2.1
       with:
         tag_name: release
@@ -81,7 +80,6 @@ jobs:
 
     # 创建新的发布版本
     - name: Create Release
-      if: github.event_name == 'push' && github.ref == 'refs/heads/main' || github.event_name == 'workflow_dispatch'
       id: create_release
       uses: softprops/action-gh-release@v1
       with:
