ci:优化 GitHub Actions 工作流
- 添加 workflow_dispatch事件，允许手动触发构建
-

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -5,7 +5,10 @@ on:
   push:
     branches: [ main ]
     paths:
+      - '**/*'
       - '!.github/workflows/**'
+      - '!README.md'
+      - '!LICENSE'
   pull_request:
     branches: [ main ]
 
