cmake: 设置默认构建类型为 Release
- 在 CMakeLists.txt 文件中添加了对 CMAKE_BUILD_TYPE 变量的检查和设置
- 如果未定义 CMAKE_BUILD_TYPE，则默认设置为 "Release"- 此修改确保了在没有指定构建类型时，能够使用一个默认的构建类型

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,9 @@ if(is_multi_config)
     if(NOT CMAKE_CONFIGURATION_TYPES)
         set(CMAKE_CONFIGURATION_TYPES "Debug;Release;MinSizeRel;RelWithDebInfo" CACHE STRING "" FORCE)
     endif()
+    if(NOT CMAKE_BUILD_TYPE)
+        set(CMAKE_BUILD_TYPE "Release" CACHE STRING "Choose the type of build" FORCE)
+    endif()
     message(STATUS "Using multi-config generator with types: ${CMAKE_CONFIGURATION_TYPES}")
 else()
     # 对于单配置生成器，设置默认构建类型
