feat: 添加托盘图标功能并优化程序结构
- 新增 TrayIcon 类实现托盘图标功能- 重构 main 函数和 run 函数，采用多线程设计
- 添加信号处理和托盘菜单支持
- 优化日志输出和程序退出流程

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -198,11 +198,7 @@ if(CMAKE_BUILD_TYPE MATCHES "Release")
         target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/res/resource.rc")
         message(" add ${CMAKE_CURRENT_SOURCE_DIR}/res/resource.rc ")
     endif()
-#    set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS "/subsystem:windows /ENTRY:mainCRTStartup")
-    set_target_properties(${PROJECT_NAME} PROPERTIES
-            WIN32_EXECUTABLE TRUE
-            LINK_FLAGS "/ENTRY:WinMainCRTStartup"
-    )
+    set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS "/subsystem:windows /ENTRY:mainCRTStartup")
 else()
     # 默认情况
     add_executable(${PROJECT_NAME} main.cpp ${SRCS})
@@ -210,7 +206,7 @@ else()
         target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}/res/resource.rc")
         message(" add ${CMAKE_CURRENT_SOURCE_DIR}/res/resource.rc ")
     endif()
-    set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS "/ENTRY:mainCRTStartup")
+#    set_target_properties(${PROJECT_NAME} PROPERTIES LINK_FLAGS "/ENTRY:mainCRTStartup")
 endif()
 
 ##########################################################################################
